--- a/config/overlays/kubeflow/kustomization.yaml
+++ b/config/overlays/kubeflow/kustomization.yaml
@@ -10,7 +10,7 @@ commonLabels:
   app.kubernetes.io/name: kserve
 
 bases:
-- ../../default
+- ../../web-app
 - web-app-authorization-policy.yaml
 
 patchesStrategicMerge:
