Implement editing model servers
Signed-off-by: Mark Winter <mark.winter@navercorp.com>

--- a/config/overlays/kubeflow/patches/web-app-vsvc.yaml
+++ b/config/overlays/kubeflow/patches/web-app-vsvc.yaml
@@ -4,3 +4,7 @@
     host: kserve-models-web-app.kubeflow.svc.cluster.local
     port:
       number: 80
+- op: replace
+  path: /spec/gateways
+  value:
+    - kubeflow/kubeflow-gateway
