--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,61 +4,69 @@
   "scripts": {
     "ng": "ng",
     "format": "prettier --write './**/*.{ts,html,css}'",
-    "build": "npm run copyLibAssets && ng build --prod --deploy-url static/",
-    "build:watch": "npm run copyLibAssets && ng build --watch --deploy-url static/ --outputPath ../backend/apps/v1beta1/static/ --outputHashing all",
+    "build": "npm run copyLibAssets && ng build --configuration production --deploy-url static/",
+    "build:fr": "npm run copyLibAssets && ng build --configuration fr --deploy-url static/",
+    "build:watch": "npm run copyLibAssets && ng build --configuration production --watch --deploy-url static/ --output-path ../backend/apps/v1beta1/static/ --outputHashing all",
+    "build:watch:fr": "npm run copyLibAssets && ng build --configuration fr --watch --deploy-url static/ --output-path ../backend/apps/v1beta1/static/ --outputHashing all",
     "build:watch:ng": "npm run copyLibAssets && ng serve --proxy-config proxy.conf.json",
-    "copyLibAssets": "cp ./node_modules/kubeflow/assets/* ./src/assets/",
+    "copyLibAssets": "cp -r ./node_modules/kubeflow/assets/* ./src/assets/",
+    "format:check": "prettier --check 'src/**/*.{js,ts,html,scss,css}' || node scripts/check-format-error.js",
+    "format:write": "prettier --write 'src/**/*.{js,ts,html,scss,css}'",
+    "i18n:extract": "ng extract-i18n --output-path i18n",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/cdk-experimental": "^8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@angular/animations": "~12.2.16",
+    "@angular/cdk": "^12.2.13",
+    "@angular/cdk-experimental": "^12.2.13",
+    "@angular/common": "~12.2.16",
+    "@angular/compiler": "~12.2.16",
+    "@angular/core": "~12.2.16",
+    "@angular/forms": "~12.2.16",
+    "@angular/localize": "^12.2.16",
+    "@angular/material": "^12.2.13",
+    "@angular/platform-browser": "~12.2.16",
+    "@angular/platform-browser-dynamic": "~12.2.16",
+    "@angular/router": "~12.2.16",
+    "@derekbaker/ngx-ace-editor-wrapper": "^12.2.16",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@kubernetes/client-node": "^0.12.2",
+    "ace-builds": "^1.4.14",
     "date-fns": "^1.29.0",
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.20",
     "lodash-es": "^4.17.11",
     "material-icons": "^0.3.1",
-    "ng2-ace-editor": "^0.3.9",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "rxjs": "~6.6.7",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "~8.3.20",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
+    "@angular-devkit/build-angular": "~12.2.17",
+    "@angular-devkit/core": "^12.2.17",
+    "@angular/cli": "~12.2.17",
+    "@angular/compiler-cli": "~12.2.16",
+    "@angular/language-service": "~12.2.16",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~4.1.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.18",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "tslint": "~6.1.0",
+    "typescript": "~4.3.5"
   }
 }
