Run the tests only in the backend
Signed-off-by: Kimonas Sotirchos <kimwnasptd@arrikto.com>

--- a/.github/workflows/flake-lint.yml
+++ b/.github/workflows/flake-lint.yml
@@ -18,3 +18,5 @@ jobs:
           python-version: "3.7"
       - name: flake8 Lint
         uses: py-actions/flake8@v1
+        with:
+          path: backend
