rename the path of the app
Signed-off-by: Kimonas Sotirchos <kimwnasptd@arrikto.com>

--- a/config/base/istio.yaml
+++ b/config/base/istio.yaml
@@ -11,7 +11,7 @@ spec:
   http:
   - match:
     - uri:
-        prefix: /models/
+        prefix: /kserve-endpoints/
     rewrite:
       uri: /
     route:
