--- a/config/base/kustomization.yaml
+++ b/config/base/kustomization.yaml
@@ -6,6 +6,10 @@ resources:
 commonLabels:
   kustomize.component: kserve-models-web-app
   app.kubernetes.io/component: kserve-models-web-app
+images:
+- name: kserve/models-web-app
+  newName: kserve/models-web-app
+  newTag: v0.7.0
 configMapGenerator:
   - name: kserve-models-web-app-config
     literals:
