gh: Use cat for getting the tag
Signed-off-by: Kimonas Sotirchos <kimwnasptd@arrikto.com>

--- a/.github/workflows/docker-publish-releasing.yml
+++ b/.github/workflows/docker-publish-releasing.yml
@@ -50,7 +50,7 @@ jobs:
           IMAGE_ID=kserve/$IMAGE_NAME
           # Change all uppercase to lowercase
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          VERSION=$(echo ./releasing/VERSION)
+          VERSION=$(cat ./releasing/VERSION)
 
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
