manifests: Set the prefix in the backend
The backend should also be aware of the prefix in order to configure the
frontend files accordingly.

Signed-off-by: Kimonas Sotirchos <kimwnasptd@arrikto.com>

--- a/config/overlays/kubeflow/kustomization.yaml
+++ b/config/overlays/kubeflow/kustomization.yaml
@@ -36,6 +36,7 @@ configMapGenerator:
     behavior: replace
     literals:
     - USERID_HEADER=kubeflow-userid
+    - APP_PREFIX=/kserve-endpoints
 
 configurations:
 - params.yaml
