--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "npm run copyLibAssets && ng build --prod --deploy-url static/",
     "build:watch": "npm run copyLibAssets && ng build --watch --deploy-url static/ --outputPath ../backend/apps/v1beta1/static/ --outputHashing all",
     "build:watch:ng": "npm run copyLibAssets && ng serve --proxy-config proxy.conf.json",
-    "copyLibAssets": "cp ./node_modules/kubeflow/assets/* ./src/assets/",
+    "copyLibAssets": "cp -r ./node_modules/kubeflow/assets/* ./src/assets/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
