--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,7 @@
     "lodash": "^4.17.20",
     "lodash-es": "^4.17.11",
     "material-icons": "^0.3.1",
-    "ng2-ace-editor": "^0.3.9",
+    "ngx-ace-editor-wrapper": "^9.1.12",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
