remove script for angular compatibility
Signed-off-by: DavidSpek <vanderspek.david@gmail.com>

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,11 +26,7 @@
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.scss"],
-            "scripts": [
-              "node_modules/ace-builds/src-min/ace.js",
-              "node_modules/ace-builds/src-min/mode-yaml.js",
-              "node_modules/ace-builds/src-min/theme-xcode.js"
-            ],
+            "scripts": [],
             "crossOrigin": "use-credentials"
           },
           "configurations": {
