--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.4",
+    "@angular-devkit/core": "^11.2.19",
     "@angular/cli": "~10.2.4",
     "@angular/compiler-cli": "~10.2.5",
     "@angular/language-service": "~10.2.5",
