--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,14 @@
     "ng": "ng",
     "format": "prettier --write './**/*.{ts,html,css}'",
     "build": "npm run copyLibAssets && ng build --configuration production --deploy-url static/",
-    "build:watch": "npm run copyLibAssets && ng build --watch --deploy-url static/ --outputPath ../backend/apps/v1beta1/static/ --outputHashing all",
+    "build:fr": "npm run copyLibAssets && ng build --configuration fr --deploy-url static/",
+    "build:watch": "npm run copyLibAssets && ng build --configuration production --watch --deploy-url static/ --output-path ../backend/apps/v1beta1/static/ --outputHashing all",
+    "build:watch:fr": "npm run copyLibAssets && ng build --configuration fr --watch --deploy-url static/ --output-path ../backend/apps/v1beta1/static/ --outputHashing all",
     "build:watch:ng": "npm run copyLibAssets && ng serve --proxy-config proxy.conf.json",
     "copyLibAssets": "cp -r ./node_modules/kubeflow/assets/* ./src/assets/",
+    "format:check": "prettier --check 'src/**/*.{js,ts,html,scss,css}' || node scripts/check-format-error.js",
+    "format:write": "prettier --write 'src/**/*.{js,ts,html,scss,css}'",
+    "i18n:extract": "ng extract-i18n --output-path i18n",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -21,7 +26,7 @@
     "@angular/compiler": "~12.2.16",
     "@angular/core": "~12.2.16",
     "@angular/forms": "~12.2.16",
-    "@angular/localize": "^13.3.2",
+    "@angular/localize": "^12.2.16",
     "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.2.16",
     "@angular/platform-browser-dynamic": "~12.2.16",
@@ -51,13 +56,13 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~4.1.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.18",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
