fix: update configs and docs
Adjust the configs to work properly in both standalone mode
and with Kubeflow. Some documentation fixes were also added.

Signed-off-by: Paul Van Eck <pvaneck@us.ibm.com>

--- a/config/base/kustomization.yaml
+++ b/config/base/kustomization.yaml
@@ -3,9 +3,13 @@ resources:
 - service.yaml
 - deployment.yaml
 - istio.yaml
+
+namespace: kserve
+
 commonLabels:
   kustomize.component: kserve-models-web-app
   app.kubernetes.io/component: kserve-models-web-app
+
 images:
 - name: kserve/models-web-app
   newName: kserve/models-web-app
