--- a/config/base/istio.yaml
+++ b/config/base/istio.yaml
@@ -5,13 +5,13 @@ metadata:
   namespace: kserve
 spec:
   gateways:
-  - $(ingressGateway)
+  - knative-serving/knative-ingress-gateway
   hosts:
   - '*'
   http:
   - match:
     - uri:
-        prefix: /kserve-endpoints/
+        prefix: /models/
     rewrite:
       uri: /
     route:
