--- a/config/base/deployment.yaml
+++ b/config/base/deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app.kubernetes.io/component: kserve-models-web-app
     spec:
       containers:
-      - image: kserve/models-web-app:latest
+      - image: kserve/models-web-app:v0.8.0
         imagePullPolicy: Always
         name: kserve-models-web-app
         envFrom:
