--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,18 +33,17 @@
     "@angular/platform-browser": "~12.2.16",
     "@angular/platform-browser-dynamic": "~12.2.16",
     "@angular/router": "~12.2.16",
-    "@derekbaker/ngx-ace-editor-wrapper": "^12.2.16",
     "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@kubernetes/client-node": "^0.12.2",
-    "ace-builds": "^1.4.14",
     "date-fns": "^1.29.0",
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.20",
     "lodash-es": "^4.17.11",
     "material-icons": "^0.7.7",
+    "monaco-editor": "^0.33.0",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
