--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "format:write": "prettier --write 'src/**/*.{js,ts,html,scss,css}'",
     "i18n:extract": "ng extract-i18n --output-path i18n",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint-check": "ng lint",
+    "lint": "ng lint --fix",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -50,13 +51,21 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.17",
     "@angular-devkit/core": "^12.2.17",
+    "@angular-eslint/builder": "12.7.0",
+    "@angular-eslint/eslint-plugin": "12.7.0",
+    "@angular-eslint/eslint-plugin-template": "12.7.0",
+    "@angular-eslint/schematics": "12.7.0",
+    "@angular-eslint/template-parser": "12.7.0",
     "@angular/cli": "~12.2.17",
     "@angular/compiler-cli": "~12.2.16",
     "@angular/language-service": "~12.2.16",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
     "codelyzer": "^6.0.0",
+    "eslint": "^7.26.0",
     "jasmine-core": "~4.1.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.18",
@@ -66,7 +75,6 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
     "typescript": "~4.3.5"
   }
 }
