--- a/.github/workflows/test-node.yaml
+++ b/.github/workflows/test-node.yaml
@@ -6,7 +6,7 @@ on:
       - frontend/**
 
 jobs:
-  test:
+  frontend-format-linting-check:
     name: Code format and lint
     runs-on: ubuntu-latest
 
@@ -28,3 +28,38 @@ jobs:
         run: |
           cd frontend
           npm run lint-check
+
+  frontend-unit-tests:
+    name: Frontend Unit Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 12
+
+      - name: Fetch Kubeflow and install common code dependencies
+        run: |
+          COMMIT=$(cat frontend/COMMIT)
+          cd /tmp && git clone https://github.com/kubeflow/kubeflow.git
+          cd kubeflow
+          git checkout $COMMIT
+          cd components/crud-web-apps/common/frontend/kubeflow-common-lib
+          npm i
+          npm run build
+          npm link ./dist/kubeflow
+
+      - name: Install MWA dependencies
+        run: |
+          cd frontend
+          npm i
+          npm link kubeflow
+
+      - name: Run unit tests
+        run: |
+          cd frontend
+          npm run test:prod
