--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "format:write": "prettier --write 'src/**/*.{js,ts,html,scss,css}'",
     "i18n:extract": "ng extract-i18n --output-path i18n",
     "test": "ng test",
+    "test:prod": "ng test --browsers=ChromeHeadless --watch=false",
     "lint-check": "ng lint",
     "lint": "ng lint --fix",
     "e2e": "ng e2e"
@@ -43,7 +44,7 @@
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.20",
     "lodash-es": "^4.17.11",
-    "material-icons": "^0.3.1",
+    "material-icons": "^0.7.7",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
