gh-actions: solve version conflict for frontend test
Signed-off-by: Igor Kvachenok <igor.kvachenok@prokube.ai>

--- a/.github/workflows/test-node.yaml
+++ b/.github/workflows/test-node.yaml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Format code
         run: |
-          npm install prettier --prefix ./frontend
+          npm install prettier@2.8.8 --prefix ./frontend
           make prettier-check
 
       - name: Lint code
