--- a/config/overlays/kubeflow/kustomization.yaml
+++ b/config/overlays/kubeflow/kustomization.yaml
@@ -5,25 +5,9 @@ kind: Kustomization
 namespace: kubeflow
 
 # Labels to add to all resources and selectors.
-commonLabels:
-  app: kserve
-  app.kubernetes.io/name: kserve
 
-bases:
-- ../../base
-- web-app-authorization-policy.yaml
 
-patchesStrategicMerge:
-- patches/web-app-sidecar.yaml
 
-patchesJson6902:
-- target:
-    group: networking.istio.io
-    version: v1beta1
-    kind: VirtualService
-    name: kserve-models-web-app
-    namespace: kserve
-  path: patches/web-app-vsvc.yaml
 
 generatorOptions:
   disableNameSuffixHash: true
@@ -32,11 +16,28 @@ generatorOptions:
 # variabalize ingress gateway, webhook service name and
 # kserve namespace in webhook configurations
 configMapGenerator:
-  - name: kserve-models-web-app-config
-    behavior: replace
-    literals:
-    - USERID_HEADER=kubeflow-userid
-    - APP_PREFIX=/kserve-endpoints
+- behavior: replace
+  literals:
+  - USERID_HEADER=kubeflow-userid
+  - APP_PREFIX=/kserve-endpoints
+  name: kserve-models-web-app-config
 
 configurations:
 - params.yaml
+resources:
+- ../../base
+- web-app-authorization-policy.yaml
+labels:
+- includeSelectors: true
+  pairs:
+    app: kserve
+    app.kubernetes.io/name: kserve
+patches:
+- path: patches/web-app-vsvc.yaml
+  target:
+    group: networking.istio.io
+    kind: VirtualService
+    name: kserve-models-web-app
+    namespace: kserve
+    version: v1beta1
+- path: patches/web-app-sidecar.yaml
