Update VERSION and Kustomize for v0.14.0-rc.0
Signed-off-by: Griffin-Sullivan <gsulliva@redhat.com>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
+  "name": "kserve-models-web-app",
+  "version": "0.14.0-rc.0",
   "scripts": {
     "ng": "ng",
     "format": "prettier --write './**/*.{ts,html,css}'",
