--- a/.github/workflows/test-node.yaml
+++ b/.github/workflows/test-node.yaml
@@ -1,47 +1,42 @@
 name: Frontend Test
-
 on:
   pull_request:
     paths:
       - frontend/**
-
 jobs:
   frontend-format-linting-check:
     name: Code format and lint
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 12
-
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
       - name: Format code
         run: |
           npm install prettier@2.8.8 --prefix ./frontend
           make prettier-check
-
       - name: Lint code
         run: |
           cd frontend
+          npm ci --no-audit
           npm run lint-check
-
   frontend-unit-tests:
     name: Frontend Unit Tests
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 12
-
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
       - name: Fetch Kubeflow and install common code dependencies
         run: |
           COMMIT=$(cat frontend/COMMIT)
@@ -49,16 +44,16 @@ jobs:
           cd kubeflow
           git checkout $COMMIT
           cd components/crud-web-apps/common/frontend/kubeflow-common-lib
-          npm i
+          # Patch SCSS files to fix tilde imports
+          find . -name "*.scss" -exec sed -i "s|@use '~@angular/material' as mat;|@use '@angular/material' as mat;|" {} \;
+          npm ci --no-audit
           npm run build
           npm link ./dist/kubeflow
-
       - name: Install MWA dependencies
         run: |
           cd frontend
-          npm i
+          npm ci --no-audit
           npm link kubeflow
-
       - name: Run unit tests
         run: |
           cd frontend
