Upgrade to Angular v14 (#109)
* updated node from v16 to v22

Signed-off-by: Harshit Nayan <harshitacademia@gmail.com>

* upgraded to Angular 13 and fixed dependencies

Signed-off-by: LogicalGuy77 <harshitacademia@gmail.com>

* fixed github CI workflows (#5)

* testing cidcd

* fixed lint

Signed-off-by: LogicalGuy77 <harshitacademia@gmail.com>

* fixed linting

Signed-off-by: Harshit Nayan <138717001+LogicalGuy77@users.noreply.github.com>

* update README to reflect node v12 to v16

Signed-off-by: LogicalGuy77 <harshitacademia@gmail.com>

* removed duplicate for the ENV NODE_OPTIONS

Signed-off-by: LogicalGuy77 <harshitacademia@gmail.com>

* upgrade Angular dependencies to version 14 and COMMIT now refrences to 78969ee

Signed-off-by: LogicalGuy77 <harshitacademia@gmail.com>

* updated node version in README

Signed-off-by: LogicalGuy77 <harshitacademia@gmail.com>

* refactor: enhance frontend unit test workflow and update Angular configuration

Signed-off-by: LogicalGuy77 <harshitacademia@gmail.com>

---------

Signed-off-by: Harshit Nayan <harshitacademia@gmail.com>
Signed-off-by: LogicalGuy77 <harshitacademia@gmail.com>
Signed-off-by: Harshit Nayan <138717001+LogicalGuy77@users.noreply.github.com>

--- a/.github/workflows/test-node.yaml
+++ b/.github/workflows/test-node.yaml
@@ -1,65 +1,61 @@
 name: Frontend Test
-
 on:
   pull_request:
     paths:
       - frontend/**
-
 jobs:
   frontend-format-linting-check:
     name: Code format and lint
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 12
-
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
       - name: Format code
         run: |
           npm install prettier@2.8.8 --prefix ./frontend
           make prettier-check
-
       - name: Lint code
         run: |
           cd frontend
+          npm ci --no-audit
           npm run lint-check
-
   frontend-unit-tests:
-    name: Frontend Unit Tests
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 12
-
-      - name: Fetch Kubeflow and install common code dependencies
-        run: |
-          COMMIT=$(cat frontend/COMMIT)
-          cd /tmp && git clone https://github.com/kubeflow/kubeflow.git
-          cd kubeflow
-          git checkout $COMMIT
-          cd components/crud-web-apps/common/frontend/kubeflow-common-lib
-          npm i
-          npm run build
-          npm link ./dist/kubeflow
-
-      - name: Install MWA dependencies
-        run: |
-          cd frontend
-          npm i
-          npm link kubeflow
-
-      - name: Run unit tests
-        run: |
-          cd frontend
-          npm run test:prod
+      name: Frontend Unit Tests
+      runs-on: ubuntu-latest
+      steps:
+        - name: Check out code
+          uses: actions/checkout@v3
+        - name: Setup Node
+          uses: actions/setup-node@v3
+          with:
+            node-version: 16
+            cache: 'npm'
+            cache-dependency-path: frontend/package-lock.json
+        - name: Fetch Kubeflow and Build Common Library
+          run: |
+            COMMIT=$(cat frontend/COMMIT)
+            cd /tmp && git clone https://github.com/kubeflow/kubeflow.git
+            cd kubeflow
+            git checkout $COMMIT
+            cd components/crud-web-apps/common/frontend/kubeflow-common-lib
+            npm ci --no-audit
+            npm run build
+            npm link ./dist/kubeflow
+        - name: Install Frontend Dependencies
+          run: |
+            cd frontend
+            npm ci --no-audit
+            npm link kubeflow
+        - name: Verify Linked Styles (Debugging)
+          run: |
+            ls -l frontend/node_modules/kubeflow/styles/
+        - name: Run Unit Tests
+          run: |
+            cd frontend
+            npm run test:prod
