fix: Improve local development setup
Signed-off-by: Chigozirim Eke <ceke@dhcp-155-233.cu-wireless-students.carleton.ca>

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
     "format": "prettier --write './**/*.{ts,html,css}'",
     "build": "npm run copyLibAssets && ng build --configuration production --deploy-url static/",
     "build:fr": "npm run copyLibAssets && ng build --configuration fr --deploy-url static/",
-    "build:watch": "npm run copyLibAssets && ng build --configuration production --watch --deploy-url static/ --output-path ../backend/apps/v1beta1/static/ --outputHashing all",
-    "build:watch:fr": "npm run copyLibAssets && ng build --configuration fr --watch --deploy-url static/ --output-path ../backend/apps/v1beta1/static/ --outputHashing all",
+    "build:watch": "npm run copyLibAssets && ng build --configuration production --watch --deploy-url static/ --output-path ../backend/apps/v1beta1/static/ --output-hashing all",
+    "build:watch:fr": "npm run copyLibAssets && ng build --configuration fr --watch --deploy-url static/ --output-path ../backend/apps/v1beta1/static/ --output-hashing all",
     "build:watch:ng": "npm run copyLibAssets && ng serve --proxy-config proxy.conf.json",
     "copyLibAssets": "cp -r ./node_modules/kubeflow/assets/* ./src/assets/",
     "format:check": "prettier --check 'src/**/*.{js,ts,html,scss,css}' || node scripts/check-format-error.js",
