fix: Update Python setup and flake8 action versions in CI workflow
Signed-off-by: LogicalGuy77 <harshitacademia@gmail.com>

--- a/.github/workflows/flake-lint.yml
+++ b/.github/workflows/flake-lint.yml
@@ -13,10 +13,20 @@ jobs:
       - name: Check out source repository
         uses: actions/checkout@v4
       - name: Set up Python environment
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          # Key includes Python version and requirements file hash
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Install dependencies
+        run: pip install flake8
       - name: flake8 Lint
-        uses: py-actions/flake8@v1
+        uses: py-actions/flake8@v2
         with:
           path: backend
