--- a/.github/workflows/docker-publish-releasing.yml
+++ b/.github/workflows/docker-publish-releasing.yml
@@ -1,4 +1,4 @@
-name: Models Web App OCI Container Publisher (Releasing)
+name: Models Web Application OCI Container Publisher (Releasing)
 
 on:
   push:
@@ -17,8 +17,22 @@ env:
   IMAGE_NAME: models-web-application
 
 jobs:
+  # Run tests.
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run tests
+        run: |
+          docker build . --file Dockerfile
+
   # Push image to GitHub Container Registry.
   push:
+    # Ensure test job passes before pushing image.
+    needs: test
+
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     permissions:
