--- a/.github/workflows/docker-publish-releasing.yml
+++ b/.github/workflows/docker-publish-releasing.yml
@@ -1,4 +1,4 @@
-name: Models Web Application OCI Container Publisher (Releasing)
+name: Models Web Application OCI image Publisher (Releasing)
 
 on:
   push:
