fix directory for python formatting and pre-commit file name
Signed-off-by: Harshit Nayan <harshitacademia@gmail.com>

--- a/.github/workflows/linting_bash_python_yaml_files.yaml
+++ b/.github/workflows/linting_bash_python_yaml_files.yaml
@@ -29,8 +29,7 @@ jobs:
     - uses: psf/black@stable
       with:
         src: |
-          ./common
-          ./example
+          ./backend
 
   format_YAML_files:
     runs-on: ubuntu-latest
