feat: Update common library source from kubeflow/kubeflow to kubeflow/notebooks and add new frontend styling.
Signed-off-by: alokdangre <alokdangre@gmail.com>

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -4,8 +4,8 @@
 #   make setup KUBEFLOW_REPOSITORY=/path/to/kubeflow
 #   make setup KF_REPO=/path/to/kubeflow
 
-KUBEFLOW_REPOSITORY ?= $(or $(KF_REPO),../../kubeflow)
-KUBEFLOW_REMOTE ?= https://github.com/kubeflow/kubeflow
+KUBEFLOW_REPOSITORY ?= $(or $(KF_REPO),../../notebooks)
+KUBEFLOW_REMOTE ?= https://github.com/kubeflow/notebooks
 
 COMMIT_FILE := ./COMMIT
 COMMON_LIBRARY_DIRECTORY := $(KUBEFLOW_REPOSITORY)/components/crud-web-apps/common/frontend/kubeflow-common-lib
@@ -22,27 +22,24 @@ setup:
 	    echo "Cloning $(KUBEFLOW_REMOTE) into $(KUBEFLOW_REPOSITORY)"; \
 	    git clone "$(KUBEFLOW_REMOTE)" "$(KUBEFLOW_REPOSITORY)"; \
 	fi
+	@echo ">> Checking repository status"
+	@TARGET_COMMIT=$$(cat "$(COMMIT_FILE)"); \
+	cd "$(KUBEFLOW_REPOSITORY)" && \
+	git fetch "$(KUBEFLOW_REMOTE)" notebooks-v1 && \
+	git checkout "$$TARGET_COMMIT"
 	@if [ ! -d "$(COMMON_LIBRARY_DIRECTORY)" ]; then \
 	    echo "Expected common lib at: $(COMMON_LIBRARY_DIRECTORY)"; \
 	    echo "Verify KUBEFLOW_REPOSITORY is correct."; \
 	    exit 1; \
 	fi
-	@echo ">> Checking kubeflow-common-lib status"
-	@TARGET_COMMIT=$$(cat "$(COMMIT_FILE)"); \
-	if [ -d "$(COMMON_LIBRARY_DISTRIBUTION)" ] && [ "$$(cd "$(COMMON_LIBRARY_DIRECTORY)" && git rev-parse HEAD)" = "$$(cd "$(COMMON_LIBRARY_DIRECTORY)" && git rev-parse "$$TARGET_COMMIT")" ]; then \
-	    echo ">> kubeflow-common-library is up-to-date at commit $$TARGET_COMMIT; skipping build"; \
-	else \
-	    echo ">> Building kubeflow-common-library at commit $$TARGET_COMMIT"; \
-	    cd "$(COMMON_LIBRARY_DIRECTORY)" && \
-	    git fetch --all --tags && \
-	    git checkout "$$TARGET_COMMIT" && \
-	    npm install && \
-	    npm run build; \
-	fi
-	@cd "$(COMMON_LIBRARY_DIRECTORY)" && cd dist/kubeflow && npm link
+	@echo ">> Building kubeflow-common-library"
+	@cd "$(COMMON_LIBRARY_DIRECTORY)" && \
+	npm install && \
+	npm run build
 	@echo ">> Installing frontend dependencies and linking kubeflow-common-library"
 	@npm install
-	@npm link kubeflow
+	@rm -rf node_modules/kubeflow
+	@ln -s "$$(readlink -f $(COMMON_LIBRARY_DISTRIBUTION))" node_modules/kubeflow
 	@echo "✔ Setup complete. Now run: npm run build:watch"
 
 clean:
