Improve Makefile documentation and add caching for notebooks repo
- Use shorter commit hash (7 chars) in frontend/COMMIT for consistency
- Add consistent annotations across all Makefiles about kubeflow/notebooks repo
- Add intelligent caching to frontend Makefile setup:
  * Skip git fetch/checkout if already at target commit
  * Skip library rebuild if already built
  * Skip npm install if dependencies exist
  * Skip symlink recreation if already correct
  * Skip asset copying if already present
- Add automatic CSS and assets copying during setup
- Add fallback for short hash resolution with git rev-parse

Resolves issues with fresh setup and improves developer experience
with faster repeated setup runs.

Signed-off-by: Harshit Nayan <harshitacademia@gmail.com>

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,8 +1,8 @@
 SHELL=bash
 
-# In order to develop locally you will need to use common python code
-# from the kubeflow/notebooks repo. You can clone the repo in a specific
-# folder and use the following ENV Var to configure it.
+# Local path to kubeflow/notebooks repo for common backend code.
+# Clone https://github.com/kubeflow/notebooks to develop locally.
+# Set KUBEFLOW_REPOSITORY env var or use default /tmp/notebooks.
 KUBEFLOW_REPO ?= $(or $(KUBEFLOW_REPOSITORY),/tmp/notebooks)
 COMMON_BACKEND_DIR ?= ${KUBEFLOW_REPO}/components/crud-web-apps/common/backend
 
