--- a/config/base/kustomization.yaml
+++ b/config/base/kustomization.yaml
@@ -14,6 +14,7 @@ images:
 configMapGenerator:
 - literals:
   - APP_DISABLE_AUTH="True"
+  - SSE_ENABLED="true"
   - GRAFANA_PREFIX="/grafana"
   - GRAFANA_CPU_MEMORY_DB="db/knative-serving-revision-cpu-and-memory-usage"
   - GRAFANA_HTTP_REQUESTS_DB="db/knative-serving-revision-http-requests"
