--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "@kubernetes/client-node": "^0.17.0",
     "ace-builds": "^1.40.0",
     "date-fns": "^1.29.0",
+    "eventsource-polyfill": "^0.9.6",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
